err/py-finvoice.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/finvoice'...
Listing './lib/python3.5/site-packages/finvoice/ack'...
Compiling './lib/python3.5/site-packages/finvoice/ack/ack.py'...
***   File "./lib/python3.5/site-packages/finvoice/ack/ack.py", line 93
    except ImportError, exp:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finvoice/ack/ackEb.py'...
***   File "./lib/python3.5/site-packages/finvoice/ack/ackEb.py", line 93
    except ImportError, exp:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finvoice/ack/ackEbsubs.py'...
***   File "./lib/python3.5/site-packages/finvoice/ack/ackEbsubs.py", line 204
    print USAGE_TEXT
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/finvoice/ack/acksubs.py'...
***   File "./lib/python3.5/site-packages/finvoice/ack/acksubs.py", line 267
    print USAGE_TEXT
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/finvoice/attachment'...
Compiling './lib/python3.5/site-packages/finvoice/attachment/attachment.py'...
***   File "./lib/python3.5/site-packages/finvoice/attachment/attachment.py", line 93
    except ImportError, exp:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finvoice/attachment/attachmentsubs.py'...
***   File "./lib/python3.5/site-packages/finvoice/attachment/attachmentsubs.py", line 232
    print USAGE_TEXT
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/finvoice/finvoice.py'...
***   File "./lib/python3.5/site-packages/finvoice/finvoice.py", line 93
    except ImportError, exp:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finvoice/finvoice201.py'...
***   File "./lib/python3.5/site-packages/finvoice/finvoice201.py", line 93
    except ImportError, exp:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finvoice/finvoice201subs.py'...
***   File "./lib/python3.5/site-packages/finvoice/finvoice201subs.py", line 806
    print USAGE_TEXT
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/finvoice/finvoicesubs.py'...
***   File "./lib/python3.5/site-packages/finvoice/finvoicesubs.py", line 806
    print USAGE_TEXT
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/finvoice/receiver'...
Compiling './lib/python3.5/site-packages/finvoice/receiver/receiverinfo.py'...
***   File "./lib/python3.5/site-packages/finvoice/receiver/receiverinfo.py", line 93
    except ImportError, exp:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finvoice/receiver/receiverinfosubs.py'...
***   File "./lib/python3.5/site-packages/finvoice/receiver/receiverinfosubs.py", line 365
    print USAGE_TEXT
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/finvoice/receiver/receiverproposal.py'...
***   File "./lib/python3.5/site-packages/finvoice/receiver/receiverproposal.py", line 93
    except ImportError, exp:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finvoice/receiver/receiverproposalsubs.py'...
***   File "./lib/python3.5/site-packages/finvoice/receiver/receiverproposalsubs.py", line 330
    print USAGE_TEXT
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/finvoice/sender'...
Compiling './lib/python3.5/site-packages/finvoice/sender/senderinfo.py'...
***   File "./lib/python3.5/site-packages/finvoice/sender/senderinfo.py", line 93
    except ImportError, exp:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finvoice/sender/senderinfosubs.py'...
***   File "./lib/python3.5/site-packages/finvoice/sender/senderinfosubs.py", line 344
    print USAGE_TEXT
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/finvoice/soap'...
Compiling './lib/python3.5/site-packages/finvoice/soap/envelope.py'...
***   File "./lib/python3.5/site-packages/finvoice/soap/envelope.py", line 93
    except ImportError, exp:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finvoice/soap/envelopesubs.py'...
***   File "./lib/python3.5/site-packages/finvoice/soap/envelopesubs.py", line 225
    print USAGE_TEXT
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/finvoice/soap/msgheader.py'...
***   File "./lib/python3.5/site-packages/finvoice/soap/msgheader.py", line 93
    except ImportError, exp:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finvoice/soap/msgheadersubs.py'...
***   File "./lib/python3.5/site-packages/finvoice/soap/msgheadersubs.py", line 526
    print USAGE_TEXT
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_finvoice-1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
